--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  edusms:
+  schoolify:
     build:
       context: .
       dockerfile: Dockerfile
@@ -29,7 +29,7 @@ services:
 
   schoolifydb:
     image: mariadb:latest
-    container_name: schoolifydb
+    container_name: schoolify_host
     restart: unless-stopped
     ports:
       - "3307:3306"
@@ -54,7 +54,7 @@ services:
     depends_on:
       - schoolifydb
     image: adminer
-    container_name: dbbrowser
+    container_name: adminer
     restart: always
     environment:
       ADMINER_DEFAULT_SERVER: ${DB_HOST}
