--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -1,10 +1,9 @@
-# Ignore files and directories for Git
 services:
-  schoolify:
+  edusms:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: schoolify_host
+    container_name: edusms
     restart: unless-stopped
     networks:
       - dokploy-network
@@ -31,6 +30,8 @@ services:
     image: mariadb:latest
     container_name: schoolifydb
     restart: unless-stopped
+    ports:
+      - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
@@ -43,7 +44,7 @@ services:
     depends_on:
       - schoolifydb
     image: adminer
-    container_name: adminer
+    container_name: dbbrowser
     restart: always
     environment:
       ADMINER_DEFAULT_SERVER: ${DB_HOST}
