--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -1,9 +1,10 @@
+
 services:
-  edusms:
+  schoolify:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: edusms
+    container_name: schoolify_host
     restart: unless-stopped
     networks:
       - dokploy-network
@@ -30,8 +31,6 @@ services:
     image: mariadb:latest
     container_name: schoolifydb
     restart: unless-stopped
-    ports:
-      - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
@@ -44,7 +43,7 @@ services:
     depends_on:
       - schoolifydb
     image: adminer
-    container_name: dbbrowser
+    container_name: adminer
     restart: always
     environment:
       ADMINER_DEFAULT_SERVER: ${DB_HOST}
