--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -9,9 +9,12 @@ services:
     ports:
       - 80
     volumes:
-      - ${HOME}/edusms/uploads:/app/public/uploads
+      - schoolify_data:/app/public/uploads
     networks:
       - dokploy-network
+
+volumes:
+  schoolify_data:
 
 networks:
   dokploy-network:
