--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "jenssegers/agent": "^2.6",
     "joisarjignesh/bigbluebutton": "^2.3.0",
     "laravel/framework": "^10.0",
+    "laravel/horizon": "^5.29",
     "laravel/passport": "v11.8.7",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8.1",
