--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen [::]:9000 default_server;
-    listen 9000 default_server;
+    listen [::]:80 default_server;
+    listen 80 default_server;
     server_name _;
 
     sendfile off;
@@ -32,7 +32,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+        fastcgi_pass php-dev
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
