--- a/docker/default.conf
+++ b/docker/default.conf
@@ -8,7 +8,7 @@ server {
     absolute_redirect off;
     client_max_body_size 1000M;
 
-    root /home/lla/workspace/edusms;
+    root /var/www;
     index index.html index.php ;
 
     location / {
@@ -32,7 +32,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-dev
+        fastcgi_pass php-dev:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
