--- a/docker/worker.conf
+++ b/docker/worker.conf
@@ -1,6 +1,6 @@
 [program:worker]
 process_name=%(program_name)s_%(process_num)02d
-command=cd /var/www/artisan && php artisan queue:work --sleep=3 --tries=3 --timeout=90
+command=cd /var/www && php artisan queue:work --sleep=3 --tries=3 --timeout=90
 autostart=true
 autorestart=true
 numprocs=1
