--- a/docker/worker.conf
+++ b/docker/worker.conf
@@ -1,7 +1,6 @@
 [program:worker]
 process_name=%(program_name)s_%(process_num)02d
-directory=/var/www
-command=php artisan queue:work --queue=result-notice,default --sleep=10 --timeout=90
+command=php /app/artisan queue:work --queue=result-notice,default --sleep=10 --timeout=90
 autostart=true
 autorestart=true
 numprocs=1
