Updated generating pdf

--- a/docker/worker.conf
+++ b/docker/worker.conf
@@ -1,6 +1,7 @@
 [program:worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work --queue=result-notice,default --sleep=10 --timeout=90
+directory=/var/www
+command=php artisan queue:work --queue=result-notice,default --sleep=10 --timeout=90
 autostart=true
 autorestart=true
 numprocs=1
