--- a/docker/worker.conf
+++ b/docker/worker.conf
@@ -1,6 +1,6 @@
 [program:worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work --queue=published,unzip --sleep=10 --timeout=90
+command=php /app/artisan queue:work --queue=published,unzip,result-notice --sleep=10 --timeout=90
 autostart=true
 autorestart=true
 numprocs=1
