--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ Thumbs.db
 
 # Ignore files created by docker
 /frp
+
+# Ignore PrinceXML binaries and libraries
+/bin/prince
+/bin/lib/
+/bin/*.tar.gz
+/bin/prince-*-linux-generic-x86_64/
